--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
     "@types/chai": "^4.3.1",
     "@types/chalk": "^2.2.0",
     "@types/mocha": "^9.1.1",
+    "@types/moment": "^2.13.0",
     "@types/node": "^17.0.35",
     "@types/tail": "^2.2.1",
     "chai": "^4.3.6",
@@ -26,6 +27,7 @@
     "@skyraptor/logger": "^0.1.3",
     "async": "^3.2.3",
     "chalk": "^5.0.1",
+    "moment": "^2.29.3",
     "tail": "^2.2.4"
   }
 }
