--- a/package.json
+++ b/package.json
@@ -2,6 +2,7 @@
   "name": "squadms-log-watcher",
   "version": "1.0.0",
   "description": "A small application to watch Squad server log and POST events to an external HTTP-API.",
+  "type": "module",
   "scripts": {
     "build": "rimraf ./build && tsc",
     "test": "echo \"Error: no test specified\" && exit 1",
@@ -19,15 +20,18 @@
     "@types/async": "^3.2.13",
     "@types/chai": "^4.3.1",
     "@types/chalk": "^2.2.0",
+    "@types/jest": "^27.5.1",
     "@types/mocha": "^9.1.1",
     "@types/moment": "^2.13.0",
     "@types/node": "^14.11.2",
     "@types/tail": "^2.2.1",
     "chai": "^4.3.6",
     "gts": "^3.1.0",
+    "jest": "^28.1.0",
     "mocha": "^10.0.0",
     "mocha-sinon": "^2.1.2",
     "rimraf": "^3.0.2",
+    "ts-jest": "^28.0.3",
     "ts-node": "^10.8.0",
     "typescript": "^4.0.3"
   },
