--- a/.github/dependabot.yml
+++ b/.github/dependabot.yml
@@ -9,7 +9,7 @@ updates:
     schedule:
       interval: "daily"
     labels:
-      - "security"
+      - "Security"
 
   # Maintain dependencies for npm
   - package-ecosystem: "npm"
@@ -17,4 +17,4 @@ updates:
     schedule:
       interval: "daily"
     labels:
-      - "security"
+      - "Security"
